fix readme; revert to present and not latest; fix if statement formatting

--- a/roles/mac-laptop/tasks/main.yaml
+++ b/roles/mac-laptop/tasks/main.yaml
@@ -2,7 +2,7 @@
   homebrew:
     update_homebrew: yes
     name: "{{ item }}"
-    state: latest
+    state: present
   loop:
     - docker
     - minikube
